@@ -538,6 +538,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Fixed bug in Gremlin Server shutdown if failures occurred during `GraphManager` initialization.
 * Modified Gremlin Server to close the session when the channel itself is closed.
 * Fixed bug in `Order` where comparisons of `enum` types wouldn't compare with `String` values.
+* Added `:cls` command to Gremlin Console to clear the screen.
 * Added `maxWaitForClose` configuration option to the Java driver.
 * Deprecated `maxWaitForSessionClose` in the Java driver.
 * Bumped to Jackson 2.9.10.3.
